--- a/src/vis_best_run.ipynb
+++ b/src/vis_best_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "95cac42f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "32d226c8",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "ff16f739",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "d8b4b50a",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "c5957532",
    "metadata": {},
    "outputs": [
@@ -107,6 +107,7 @@
     "plt.legend()\n",
     "# dark grid\n",
     "plt.grid(visible=True, which='both', color='gray', alpha=0.7)\n",
+    "plt.savefig('mean_best_value_over_time.png',dpi=300)\n",
     "plt.show()"
    ]
   },
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "cbdcc4bd",
    "metadata": {},
    "outputs": [
@@ -155,6 +156,7 @@
     "plt.legend()\n",
     "# dark grid\n",
     "plt.grid(visible=True, which='both', color='gray', alpha=0.7)\n",
+    "plt.savefig('mean_best_value_over_time_zoomed.png',dpi=300)\n",
     "plt.show()  "
    ]
   }
