--- a/latex/r0123456_intermediate.tex
+++ b/latex/r0123456_intermediate.tex
@@ -15,6 +15,7 @@
 \usepackage{pythonhighlight}
 \usepackage{cleveref}
 \usepackage{graphicx}
+\usepackage{float}
 
 \usepackage{tcolorbox}
 \tcbuselibrary{listingsutf8,breakable,skins}
@@ -60,7 +61,7 @@
 
 %opening
 \title{\vspace{-2cm}Evolutionary Algorithms: Group report}
-\author{\ReplaceMe{Group Member 1}, \ReplaceMe{Group Member 2}, and Matties Roofthooft}
+\author{\ReplaceMe{Group Member 1}, Julius Jacobitz, and Matties Roofthooft}
 
 \begin{document}
 \fontfamily{ppl}
@@ -184,32 +185,18 @@ Memory usage is not optimized but should be fine for all problem sizes as popula
 The mean value for the whole population being way higher then the best member could indicate a high population diversity (Figure \ref{best_run_convergence}). 
 
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/mean_best_value_over_time.png} 
     \caption{Best run convergence graph over time.}
     \label{best_run_convergence}
 \end{figure}
 
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/mean_best_value_over_time_zoomed.png} 
-    \caption{Zoomed in version of Figure \ref{best_run_convergence}.}
-    \label{best_run_convergence_zoom}
-\end{figure}
-
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/histogram_best_values.png} 
     \caption{Histogram of best values for 100 different random seeds.}
     \label{histogram_best_values}
-\end{figure}
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/best_value_over_iterations.png} 
-    \caption{Best value for 100 different random seeds.}
-    \label{all_runs_best_value}
 \end{figure}
 
 
@@ -217,77 +204,22 @@ The mean value for the whole population being way higher then the best member co
 \newpage
 \appendix
 \section*{Appendix}
+
 \addcontentsline{toc}{section}{Appendix}
-
-\subsection*{A. Example code snippet}
-Below is an example of a core function used in our evolutionary algorithm implementation.
-
-\begin{promptbox}
-We are solving the travleing salesman problem on a graph with an genetic algorithm. We are looking for the shortest path between nodes.
-Your data in the given csv is a graph representation by a  nxn  matrix with distances between the nodes in each cell.  If 2 cells are not directly connected, they have a distance of infinite. Its a directed graph.
-
-You have the given code template.
-
-please generate each step of the following exercise:
-
-Generate a representation, the objective function „length", a simple population initialization, a selection mechanism, one mutation operator, one recombination operator, an elimination mechanism, and a stopping criterion that corresponds to the design that you developed in the first exercise session
-
-representation:
-\begin{itemize}
-    \item a possilbe path representation would be a list with all nodes visited in the circle. As the starting (and endpoint) are always fixed, we can just ignore vertex 1
-\end{itemize}
-
-Initialization: 
-\begin{itemize}
-    \item start with random population of possible paths (easy).
-    \item it could be worth it to test for feasability (length != inf.) at initialization
-\end{itemize}
-
-Selection: 
-\begin{itemize}
-    \item decide on a basic way to do this - we thought about k tournament selection 
-\end{itemize}
-
-Variation:
-\begin{itemize}
-    \item Mutation: All basics for permuations
-    \item Combination: order crossover 
-\end{itemize}
-
-elimination:
-\begin{itemize}
-    \item some form of elitism (always keep top 5 percent)
-    \item besides that decide on a strategy
-\end{itemize}
-
-\bigskip
-\hrule
-\bigskip
-
-
-add Insert mutation
- Swap mutation 
-Inversion Mutation
- Scramble mutation 
-as optional mutation schemes
-
-\bigskip
-\hrule
-\bigskip
-
-add dynamic mutation rate to this evolutionary algorithm
-\end{promptbox}
-
-
-
-\subsection*{B. Additional results}
-Figure~\ref{fig:extra-results} shows an additional run of the evolutionary algorithm on a different benchmark instance.
-
-\begin{figure}[h!]
+\subsection*{Figure: \ref{best_run_convergence} Zoomed}
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\linewidth]{../convergence_graph.png}
-    \caption{Convergence of mean and best fitness values over generations for an additional test case.}
-    \label{fig:extra-results}
+    \includegraphics[width=0.8\textwidth]{images/mean_best_value_over_time_zoomed.png} 
+    \caption{Zoomed in version of Figure \ref{best_run_convergence}.}
+    \label{best_run_convergence_zoom}
+\end{figure}
+
+\subsection*{Figure: Best value over all 100 random seeds}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/best_value_over_iterations.png} 
+    \caption{Best value for 100 different random seeds.}
+    \label{all_runs_best_value}
 \end{figure}
 
 \end{document}
