--- a/latex/r0123456_intermediate.tex
+++ b/latex/r0123456_intermediate.tex
@@ -77,13 +77,13 @@
 A candidate solution is represented using a permutation of all cities except for the fixed starting and ending city. Therefore, a candidate solution is represented as a permutation of the $N-1$ cities from 1 to $N-1$. By using a permutation, we ensure that every solution our algorithm creates is a valid tour. We simplify the problem since it only has to optimize the 49 “in-between” cities. We considered the classic binary representation but quickly dismissed it. Encoding a city sequence into a string of bits would be highly complex. Each candidate solution is stored as a 1D NumPy array of integers. The population is a 2D NumPy array with dimensions $(\texttt{POPULATION}\_\texttt{SIZE, N-1})$. For example, \texttt{population[i]} gives the i-th individual in the population, which is a 1D array representing its tour. 
 
 \subsection{Initialization}
-We initialize the population by generating a set of completely random permutations. Each individual in the starting population is a random, unique ordering of all the cities (nodes 1 to $N-1$). We first create a list containing all the cities that need to be visited, which is $[1, 2, 3, ..., N-1]$. We then use NumPy's \texttt{rng.permutation()} function to randomly shuffle this list. The result is a random, feasible tour where each city appears exactly once. 
+We initialize the population by generating a set of completely random permutations. Each individual in the starting population is a random, unique ordering of all the cities (nodes 1 to $N-1$). We first create a list containing all the cities that need to be visited, which is $[1, 2, 3, ..., N-1]$. We then use NumPy's \texttt{rng.permutation()} function to randomly shuffle this list. Checking each individual for length $<$ inf results in random feasible tours where each city appears exactly once. 
 
 \subsection{Selection operators}
-We considered two selection operators: fitness-proportionate selection (roulette wheel) and tournament selection. We choose $k$-tournament selection because k directly controls the selection pressure and it works well even when fitness values have a large range (like our tour lengths), as it only compares relative fitness within the tournament group. Small $k$ (e.g., 2-3) means a more diverse selection, weaker individuals have a better chance. Large $k$ (e.g., 5-10) means a more aggressive selection, strongly favoring the best individuals. We use $k = 5$ since it creates sufficient selection pressure to quickly exploit good solutions while still maintaining enough diversity to avoid premature convergence. 
+We considered two selection operators: fitness-proportionate selection (roulette wheel) and tournament selection. We choose $k$-tournament selection because k directly controls the selection pressure and it works well even when fitness values have a large range (like our tour lengths), as it only compares relative fitness within the tournament group. Small $k$ (e.g., 2-3) means a more diverse selection, weaker individuals have a better chance. Large $k$ (e.g., 5-10) means a more aggressive selection, strongly favoring the best individuals.
 
 \subsection{Mutation operator}
-We considered the following mutation operators: swap mutation, inversion mutation, scramble mutation. Based on the prompts, the inversion mutation is set as the default scheme. It effectively acts as a “macro-mutation” that can create a significant change in the tour structure while still preserving many adjacent city pairs (or “edges”). It also introduces a powerful form of randomness. We use a dynamic mutation rate that starts at a base level (e.g., 0.3) and increases when the algorithm stagnates encouraging more exploration. Besides, the potential size of the change is inherently controlled by the segment size, allowing for both small tweaks and large-scale rearrangements. 
+We considered the following mutation operators: swap mutation, inversion mutation, scramble mutation. Based on the prompts, the inversion mutation is set as the default scheme. It effectively acts as a “macro-mutation” that can create a significant change in the tour structure while still preserving many adjacent city pairs (or “edges”). It also introduces a powerful form of randomness. We use a dynamic mutation rate that starts at a base level (e.g., 0.3) and increases when the algorithm stagnates, encouraging more exploration. Besides, the potential size of the change is inherently controlled by the segment size, allowing for both small tweaks and large-scale rearrangements. 
 
 \subsection{Recombination operator}
 We considered the following crossover operations: 
@@ -93,15 +93,15 @@ We considered the following crossover operations:
     \item Position-Based Crossover: Randomly selects positions from one parent to copy into the offspring; remaining spots are filled with genes from the other parent in order, avoiding duplicates. 
 \end{itemize}
 We are using Ordered Crossover (OX) as it is easy to implement for our use case and provides us with good results. It preserves the relative order of cities between parents, and we want to promote a healthy order between generations.  \\
-Using Ordered Crossover, we can preserve partial sequences or subtours, which can represent locally optimal routes. If the two parents have little overlap, the fixed segment taken from Parent A still transfers one good partial structure. The remaining sequences filled from Parent B will likely produce high diversity offspring, potentially exploring new parts of the solution space. \\
+Using OX, we can preserve partial sequences or subtours, which can represent locally optimal routes. If the two parents have little overlap, the fixed segment taken from Parent A still transfers one good partial structure. The remaining sequences filled from Parent B will likely produce high diversity offspring, potentially exploring new parts of the solution space. \\
 We can control the OX behavior via the choice of cut points (two random indices). By adjusting how these cut points are chosen, we can control how much genetic material is inherited from each parent. Shorter segments lead to less parental inheritance, and more exploration and longer segments lead to more exploitation. Currently in our algorithm, we are using a random length substring. The OX crossover is static in our implementation. 
 
 
 \subsection{Elimination operators}
-We considered $(\lambda + \mu)$ and $(\lambda, \mu)$ elimination operators, and chose $(\lambda, \mu)$-elimination with some Elitism, so the best members are directly copied to the next generation. It guarantees that the best solutions are never lost. We have kept the elitism rate as 5\%. 
+We considered $(\lambda + \mu)$ and $(\lambda, \mu)$ elimination operators, and chose $(\lambda, \mu)$-elimination with some Elitism, so the best members are directly copied to the next generation. It guarantees that the best solutions are never lost.
 
 \subsection{Stopping criterion}
-We combined two stopping criteria for the algorithm. The primary criterion is a \textbf{maximum generation limit}, which serves as a tunable hyperparameter control when the algorithm terminates. Additionally, we implemented a \textbf{soft adaptive mechanism} through a self-adaptive mutation rate that increases when no improvement is observed over several generations, helping the algorithm escape stagnation and maintain search diversity. 
+We combined two stopping criteria for the algorithm. The primary criterion is a \textbf{maximum generation limit}, which serves as a tunable hyperparameter control when the algorithm terminates. Additionally, we implemented a \textbf{soft adaptive mechanism} through a self-adaptive mutation rate that increases when no improvement is observed over several generations. If no improvement is seen for a predefined number of generations (e.g., 300), the algorithm terminates early.
 
 \section{Implementation generation }
 
