--- a/latex/r0123456_intermediate.tex
+++ b/latex/r0123456_intermediate.tex
@@ -114,7 +114,7 @@ The code was free of coding errors, but the parameter selection was off. The cod
 
 \subsection{Critical reflection}
 Providing the AI with contextual information significantly improves the generation of the code. For a basic evolutionary algorithm, the results are astounding. Copilot produced readable and error-free code which makes it easy to manually tweak if necessary. A risk to bear in mind is that using AI as the baseline of your program could restrict the extendability of the code.  
-The use of AI tends to be more efficient than writing code from scratch provided that you carefully design a prompt and read the generated code to ensure errors are avoided are corrected. 
+The use of AI tends to be more efficient than writing code from scratch provided that you carefully design a prompt and read the generated code to ensure errors are avoided are corrected. Prompting Copilot with our description in section 1 would probably result into a suboptimal implementation since we risk to overload the AI with information. We recommend using Copilot for exercise session 2 since it enhances the productivity, but verify the resulting code with care. 
 
 \section{Numerical experiments }
 
